11. 인코딩 상태 변경 임시 리팩토링 적용